# flask_barcode_library

./: Dockerfile  README.md  config.py  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py
app/forms/: barcode.py  book_form.py  user_form.py
app/home/: __init__.py  routes.py
app/models/: book.py
app/scanner/: __init__.py  routes.py
app/shelflist/: __init__.py  routes.py
app/static/js/: scanner.js
app/templates/: 404.html  base.html
app/templates/home/: index.html
app/templates/scanner/: index.html
app/templates/shelflist/: delete.html  edit.html  index.html  missing.html
app/templates/user/: profile.html
app/user/: __init__.py  routes.py
