[tool.poetry]
name = "flask-barcode-library"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
mariadb = "^1.1.11"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
